<resources>
    <string name="app_name">CV App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_title">CV App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="contact_fragment">Contact Fragment</string>
    <string name="drawer_contact_info">Contact details</string>
    <string name="drawer_professional_experience">Professional Experience</string>
    <string name="drawer_my_pictures">My Pictures</string>
    <string name="drawer_contact_me">Contact Me</string>
    <string name="drawer_header_communicate">Communicate</string>

    <string name="professional_experience">Professional Experience</string>
    <string name="contact_details">My Contact details</string>
    <string name="send_message">Send Message</string>
    <string name="your_message">Your message</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_name">Your name</string>
    <string name="send_message_button">Send Message</string>
    <string name="thank_you_for_contacting_me">Thank you for contacting me!</string>
    <string name="sorry_your_message_could_not_be_sent">Sorry your message could not be sent!</string>
    <string name="could_not_send_please_check_all_fields_below">Could not send, please check all fields below</string>
</resources>
