<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_contact_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_contact_info"/>

        <item
                android:id="@+id/nav_experience"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/drawer_professional_experience"/>

        <item
                android:id="@+id/nav_mypics"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/drawer_my_pictures"/>

        <item
                android:id="@+id/nav_contact_me"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/drawer_contact_me"/>


    </group>

</menu>
