<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.cv.android.ui.sendmessage.SendMessageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/send_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"/>

        <EditText
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:minWidth="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/your_name"
        />

        <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:minWidth="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/your_email_address"/>

        <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:minWidth="300dp"
                android:lines="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/your_message"
        />


        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sendMessageButton"
                android:minWidth="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/send_message_button"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>